--- a/client/src/app/ui/authentication/authentication.component.css
+++ b/client/src/app/ui/authentication/authentication.component.css
@@ -8,3 +8,25 @@
   height: 100%;
   background: rgba(0, 44, 15, 0.384);
 }
+
+.wrapper > div /deep/ .wrapper{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.wrapper > div /deep/ .m_container{
+  width: 360px;
+  margin-left: auto;
+  margin-right: auto;
+
+  color: white;
+  background-color: rgba(0, 0, 0, 0.514);
+  padding: 40px 30px;
+  margin-bottom: 100px;
+}
+.wrapper > div /deep/ .m_container > h2 {
+  color: #6eb9f7;
+  font-family: MLight;
+}
