Registration page nearly completed.

--- a/client/src/app/ui/authentication/sign-up/sign-up.component.css
+++ b/client/src/app/ui/authentication/sign-up/sign-up.component.css
@@ -6,3 +6,21 @@
 .type > span{
   text-align: center;
 }
+
+.error{
+  color: rgb(238, 151, 151);
+  padding: 1px 4px 2px 4px;
+}
+
+.m_container /deep/ .p-inputtext{
+  font-family: MLight;
+  width: 100%;
+}
+.m_container /deep/ .p-calendar {
+  width: 100%;
+}
+.m-textarea{
+  font-family: MLight;
+  min-width: 100%;
+  max-width: 100%;
+}
