--- a/client/src/app/ui/authentication/authentication.component.css
+++ b/client/src/app/ui/authentication/authentication.component.css
@@ -26,7 +26,7 @@
   padding: 40px 30px;
   margin-bottom: 100px;
 }
-.wrapper > div /deep/ .m_container > h2 {
+.wrapper > div /deep/ .m_container  h2 {
   color: #6eb9f7;
   font-family: MLight;
 }
