--- a/client/src/app/ui/authentication/sign-in/sign-in.component.html
+++ b/client/src/app/ui/authentication/sign-in/sign-in.component.html
@@ -38,7 +38,7 @@
            style="color: #ff9191;">Morate popuniti ovo polje.</div>
         </div>
 
-        <div style="color: #ff9191;" *ngIf="errorMessage !== null">
+        <div style="color: #ff9191;" class="p-mt-3" *ngIf="errorMessage !== null">
           {{errorMessage}}
         </div>
 
