--- a/client/src/app/ui/authentication/sign-in/sign-in.component.html
+++ b/client/src/app/ui/authentication/sign-in/sign-in.component.html
@@ -42,15 +42,16 @@
           {{errorMessage}}
         </div>
 
-        <button class="bttn bttn-primary p-mt-4" style="width: 100%;"
-          type="submit" >Prijavi se</button>
+        <button class="bttn bttn-primary p-mt-4" style="width: 100%;">
+          Prijavi se
+        </button>
 
         <hr style="width: 100%;margin-top: 20px;border-color: white;">
 
-        <button class="bttn bttn-primary p-mt-4" style="width: 100%;"
-          routerLink="/auth/sign-up">Napravi nalog</button>
+      </form>
 
-    </form>
+      <button class="bttn bttn-primary p-mt-4" style="width: 100%"
+        routerLink="/login/sign-up">Napravi nalog</button>
   </div>
 </div>
 
