--- a/client/src/app/ui/main/header/header.component.html
+++ b/client/src/app/ui/main/header/header.component.html
@@ -16,6 +16,8 @@
             <i class="fas fa-shopping-cart"></i>
           </span>
         </li>
+        <!--Samo za testestiranje-->
+        <li><a [routerLink]="['/logout']"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout</a></li>
         <div>
           <p-avatar [label]="acc_initials" size="large" shape="circle"></p-avatar>
         </div>
