--- a/client/src/app/ui/main/header/header.component.html
+++ b/client/src/app/ui/main/header/header.component.html
@@ -17,9 +17,10 @@
           </span>
         </li>
         <!--Samo za testestiranje-->
-        <li><a [routerLink]="['/logout']"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout</a></li>
+        <li *ngIf="account !== null"><a (click)="logout()">Odjavite se</a></li>
         <div>
-          <p-avatar [label]="acc_initials" size="large" shape="circle"></p-avatar>
+          <p-avatar *ngIf="account !== null" [label]="acc_initials" size="large" shape="circle"></p-avatar>
+          <a *ngIf="account === null" [routerLink]="['/login/sign-in']"><i class="fas fa-sign-in-alt p-mr-2"></i>Prijavite se</a>
         </div>
       </ul>
     </div>
